--- a/AZMonitoring/MainWindow.xaml
+++ b/AZMonitoring/MainWindow.xaml
@@ -129,6 +129,9 @@
                                         </ListView>
                                     </StackPanel>
                                 </Border>
+                                <Border x:Name="MainStreamPBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainStreamPBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
+                                    <TextBlock Text="التعليم عن بعد" Style="{DynamicResource TXT2}" VerticalAlignment="Center" FontSize="22" FontWeight="Normal"/>
+                                </Border>
                                 <Border x:Name="MainSysManageBTN" Cursor="Hand" BorderThickness="0,1" Height="40" MouseLeftButtonDown="MainSysManageBTN_MouseLeftButtonDown" BorderBrush="#33000000" Background="#0C000000">
                                     <TextBlock Text="إدارة النظام" Style="{DynamicResource TXT2}" VerticalAlignment="Center" FontSize="24"/>
                                 </Border>
