--- a/AZMonitoring/Views/Administration/AdministrationPage.xaml
+++ b/AZMonitoring/Views/Administration/AdministrationPage.xaml
@@ -17,7 +17,7 @@
                    Style="{DynamicResource TXTLTitle4}"/>
         <GroupBox Padding="10"
                   Margin="0,10"
-                  Header="التوجيهات التعليمية بالإدارة">
+                  Header="التوجيه والمتابعة بالإدارة">
             <ListView x:Name="LVInstructs" Height="110" Background="#26000000" BorderBrush="{x:Null}">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
