--- a/AZMonitoring/Views/Streaming/YoutubeStream.xaml
+++ b/AZMonitoring/Views/Streaming/YoutubeStream.xaml
@@ -1,14 +1,15 @@
-﻿<Page x:Class="AZMonitoring.Views.Dashboard.Dashboard_MainPage"
+﻿<Page x:Class="AZMonitoring.Views.Streaming.YoutubeStream"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:AZMonitoring.Views.Dashboard"
+      xmlns:local="clr-namespace:AZMonitoring.Views.Streaming"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Dashboard_MainPage">
-
+      Title="YoutubeStream">
     <Grid>
-        <TextBlock Text="صفحة لوحة التحكم" Foreground="White" FontSize="48"/>
+        <WebBrowser x:Name="WB" Margin="10">
+            
+        </WebBrowser>
     </Grid>
 </Page>
