--- a/AZMonitoring/Views/instituation/InstitutionPage.xaml
+++ b/AZMonitoring/Views/instituation/InstitutionPage.xaml
@@ -8,81 +8,94 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="InstitutionPage">
-    <StackPanel Margin="20">
-        <materialDesign:Card Padding="5" Margin="5" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand">
-            <StackPanel Margin="20" >
-                <TextBlock Text="{Binding Path=Name}" FontWeight="Bold" FontSize="22" Margin="10" HorizontalAlignment="Center"/>
-                <TextBlock Text="إدارة المعهد" FontSize="20" HorizontalAlignment="Center" Margin="5"/>
-                <materialDesign:Card Padding="5" Margin="5" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand">
-                    <StackPanel Orientation="Horizontal" >
-                        <Border Margin="10" CornerRadius="25" BorderBrush="White" BorderThickness="1" Grid.RowSpan="2" Height="60" VerticalAlignment="Bottom" Width="60">
-                            <Border.Background>
-                                <ImageBrush ImageSource="{Binding Path=Sheikh.Photo,IsAsync=True}"/>
-                            </Border.Background>
-                        </Border>
-                        <StackPanel Orientation="Vertical" Margin="10">
-                            <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="22"><Run FlowDirection="RightToLeft" Text="شيخ المعهد"/></TextBlock>
-                            <TextBlock x:Name="TXTSH" VerticalAlignment="Center" FontSize="20"/>
-                        </StackPanel>
-                    </StackPanel>
-                </materialDesign:Card>
-                <materialDesign:Card Padding="5" Margin="5" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand">
-                    <StackPanel Orientation="Horizontal" >
-                        <Border Margin="10" CornerRadius="25" BorderBrush="White" BorderThickness="1" Grid.RowSpan="2" Height="60" VerticalAlignment="Bottom" Width="60">
-                            <Border.Background>
-                                <ImageBrush ImageSource="{Binding Path=Sheikh.Photo,IsAsync=True}"/>
-                            </Border.Background>
-                        </Border>
-                        <StackPanel Orientation="Vertical" Margin="10">
-                            <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="22"><Run FlowDirection="RightToLeft" Text="المعلم"/></TextBlock>
-                            <TextBlock x:Name="TXTTeacher" VerticalAlignment="Center" FontSize="20"/>
-                        </StackPanel>
-                    </StackPanel>
-                </materialDesign:Card>
-            </StackPanel>
-        </materialDesign:Card>
-        <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10" Background="#4db6ac">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="18" Text="عدد الطلاب المقيدين بالمعهد : " Padding="10"/>
-                <TextBlock Text="{Binding Path=StudentsCount}" VerticalAlignment="Center" FontSize="20" Padding="10"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="18" Text="عدد الفصول بالمعهد : " Padding="10"/>
-                <TextBlock Text="{Binding Path=ClassesCount}" VerticalAlignment="Center" FontSize="20" Padding="10"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="18" Text="نوع المعهد  : " Padding="10"/>
-                <TextBlock Text="{Binding Path=Type}" VerticalAlignment="Center" FontSize="20" Padding="10"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="18" Text="نبذه مختصره عن المعهد  : " Padding="10"/>
-                <TextBlock Text="{Binding Path=Description}" VerticalAlignment="Center" FontSize="20" Padding="10"/>
-            </StackPanel>
-            <GroupBox x:Name="GBA" Padding="10" FontSize="16" BorderThickness="0,1,0,0" Header="المعلمين التابعين للمعهد " Foreground="White" >
-                <ItemsControl
-                            Name="ItemsList"
-                            ItemsSource="{Binding TeachersID}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel>
-                                <materialDesign:Card Padding="5" Margin="5" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand">
-                                    <StackPanel Orientation="Horizontal" >
-                                        <Border Margin="10" CornerRadius="25" BorderBrush="White" BorderThickness="1" Grid.RowSpan="2" Height="60" VerticalAlignment="Bottom" Width="60">
-                                            <Border.Background>
-                                                <ImageBrush ImageSource="{Binding Path=Photo,IsAsync=True}"/>
-                                            </Border.Background>
-                                        </Border>
-                                        <StackPanel Orientation="Vertical" Margin="10">
-                                            <TextBlock Text="{Binding Path=PositionID }" VerticalAlignment="Center" FontWeight="Bold" FontSize="22"/>
-                                            <TextBlock Text="{Binding Path=Name}" VerticalAlignment="Center" FontSize="20"/>
-                                        </StackPanel>
-                                    </StackPanel>
-                                </materialDesign:Card>
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="2*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="{Binding Path=Institution.Name}" Grid.ColumnSpan="2" FontWeight="Bold" FontSize="22" Margin="10" HorizontalAlignment="Center" FontFamily="Tahoma"/>
+        <materialDesign:Card Padding="5" Grid.Row="1" Margin="10" Background="{DynamicResource SecondaryAccentForegroundBrush}"  materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand">
+            <ScrollViewer VerticalScrollBarVisibility="Auto" Foreground="White">
+                <StackPanel FlowDirection="RightToLeft">
+                    <materialDesign:Card Padding="5" Margin="5" MouseLeftButtonUp="Card_MouseLeftButtonUp" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand">
+                        <StackPanel Orientation="Horizontal">
+                            <Border Margin="5" CornerRadius="40" BorderBrush="White" BorderThickness="1" Grid.RowSpan="2" Height="50" VerticalAlignment="Bottom" Width="50">
+                                <Border.Background>
+                                    <ImageBrush ImageSource="{Binding Path=ShiekhPhoto,IsAsync=True}"/>
+                                </Border.Background>
+                            </Border>
+                            <StackPanel Orientation="Vertical">
+                                <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="20" Foreground="White" Text="شيخ المعهد"/>
+                                <TextBlock Text="{Binding Path=ShiekhName}" VerticalAlignment="Center" FontSize="20"/>
                             </StackPanel>
+                        </StackPanel>
+                    </materialDesign:Card>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="18" Text="عدد الطلاب  : " Padding="10"/>
+                        <TextBlock Text="{Binding Path=Institution.StudentsCount}" VerticalAlignment="Center" FontSize="20" Padding="10"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="18" Text="عدد الفصول : " Padding="10"/>
+                        <TextBlock Text="{Binding Path=Institution.ClassesCount}" VerticalAlignment="Center" FontSize="20" Padding="10"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="18" Text="نوع المعهد  : " Padding="10"/>
+                        <TextBlock Text="{Binding Path=Institution.Type}" VerticalAlignment="Center" FontSize="20" Padding="10"/>
+                    </StackPanel>
+                    <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="18" Text="نبذه مختصره عن المعهد  : " Padding="10"/>
+                    <TextBlock Text="{Binding Path=Institution.Description}" VerticalAlignment="Center" FontSize="20" Padding="10"/>
+                </StackPanel>
+            </ScrollViewer>
+        </materialDesign:Card>
+        <materialDesign:Card Grid.Row="1" Grid.Column="1" materialDesign:ShadowAssist.ShadowDepth="Depth3" VerticalAlignment="Stretch" Margin="10" Background="{DynamicResource SecondaryAccentForegroundBrush}">
+            <GroupBox x:Name="GBA" FlowDirection="RightToLeft" Padding="10" FontSize="16" BorderThickness="0,1,0,0" Foreground="White" >
+                <GroupBox.Header>
+                    <TextBlock Text="المواد التعليمية" FontFamily="Tahoma" FontWeight="Bold" FontSize="18"/>
+                </GroupBox.Header>
+                <ListView x:Name="LV">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <materialDesign:Card>
+                                <Grid>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="50"/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="150"/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="18" Text="{Binding Name}" Padding="10"/>
+                                    <ListView ItemsSource="{Binding Teachers}" Grid.Row="1">
+                                        <ListView.ItemTemplate>
+                                            <DataTemplate>
+                                                <materialDesign:Card Padding="5" Margin="5" Background="{DynamicResource  PrimaryHueMidBrush}" materialDesign:ShadowAssist.ShadowDepth="Depth3" Cursor="Hand">
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <Border Margin="5" CornerRadius="40" BorderBrush="White" BorderThickness="1" Grid.RowSpan="2" Height="50" VerticalAlignment="Bottom" Width="50">
+                                                            <Border.Background>
+                                                                <ImageBrush ImageSource="{Binding Path=Photo,IsAsync=True}"/>
+                                                            </Border.Background>
+                                                        </Border>
+                                                        <StackPanel Orientation="Vertical">
+                                                            <TextBlock VerticalAlignment="Center" FontWeight="Bold" FontSize="20" Foreground="White" Text="{Binding Position}"/>
+                                                            <TextBlock x:Name="TXTSH" VerticalAlignment="Center" FontSize="20" Text="{Binding Name}"/>
+                                                        </StackPanel>
+                                                    </StackPanel>
+                                                </materialDesign:Card>
+                                            </DataTemplate>
+                                        </ListView.ItemTemplate>
+                                    </ListView>
+                                    <Frame NavigationUIVisibility="Hidden" Grid.Row="1" Grid.Column="1" Content="{Binding WorkFrame}"/>
+                                </Grid>
+                            </materialDesign:Card>
                         </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
+                    </ListView.ItemTemplate>
+                </ListView>
             </GroupBox>
-        </StackPanel>
-    </StackPanel>
+        </materialDesign:Card>
+    </Grid>
 </Page>
